--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span class="site-description">Programmeur • Développeur Web • Graphiste</span>
         </h1>
         <div class="header-icons">
-          <a aria-label="Mon Profil LinkedIn" target="_blank" href="www.linkedin.com/in/aidelmassinissa">
+          <a aria-label="Mon Profil LinkedIn" target="_blank" href="https://linkedin.com/in/aidelmassinissa">
             <i class="icon fa fa-linkedin" aria-hidden="true"></i>
           </a>
           <a aria-label="Mon Profil Github" target="_blank" href="https://github.com/Amassi06">
