--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <i class="devicon-androidstudio-plain colored"></i>
           <i class="devicon-bash-plain colored"></i>
 
-          <p>Mes outils préférés pour le contrôle de version, l'édition de code et l'orchestration de conteneurs.</p>
+          <p>Outils préférés pour l'édition et l'organisation des scripts.</p>
         </div>
       </div>
     </section>
