--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <i class="devicon-linux-plain colored"></i>
           <i class="devicon-androidstudio-plain colored"></i>
           <i class="devicon-bash-plain colored"></i>
+          <p>Outils pour l'édition et l'organisation des scripts automates avec l'utilisation du système Linux</p>
 
         </div>
       </div>
