--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="particles-js">
       <div class="header">
         <h1>
-          <span class="site-title">AIDEL MASSINISSA</span>
+          <span class="site-title">AIDEL Massy</span>
           <span class="site-description">Programmeur • Développeur Web • Graphiste</span>
         </h1>
         <div class="header-icons">
